Create forward prop function

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6d61498",
+   "id": "bec0a36e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "411d66f0",
+   "id": "285ab24f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c839ed1c",
+   "id": "dc4b9264",
    "metadata": {
     "scrolled": true
    },
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fc67a456",
+   "id": "abc73883",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "92ea32e5",
+   "id": "811e8f10",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4206245f",
+   "id": "6a4cd3e6",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13e82937",
+   "id": "78afb3cd",
    "metadata": {},
    "source": [
     "*Create train, valid sets*"
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7bfe787b",
+   "id": "a5a56637",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f6bda08a",
+   "id": "45cafa5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "55269a1d",
+   "id": "60871e0a",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5936b5a5",
+   "id": "48c4b999",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5c5173f8",
+   "id": "ad5855b1",
    "metadata": {},
    "source": [
     "*Create Network*\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "81ba8e7c",
+   "id": "34a2f568",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a31dd214",
+   "id": "0199988f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,11 +451,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f63129de",
+   "execution_count": 44,
+   "id": "43b43e4e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ReLU(Z):\n",
+    "    return np.maximum(0, Z)\n",
+    "\n",
+    "def softmax(Z):\n",
+    "    return np.exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f00bafc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_prop(W1, b1, W2, b2, X):\n",
+    "    Z1 = W1.dot(X) + b1\n",
+    "    A1 = ReLU(Z1)\n",
+    "    Z2 = W2.dot(A1) + b2\n",
+    "    A2 = softmax(Z2)\n",
+    "    return A2"
+   ]
   }
  ],
  "metadata": {
