Create backprop function

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bec0a36e",
+   "id": "fe36a010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "285ab24f",
+   "id": "03bfde32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dc4b9264",
+   "id": "3024d23b",
    "metadata": {
     "scrolled": true
    },
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "abc73883",
+   "id": "6b236765",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "811e8f10",
+   "id": "3843b69c",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6a4cd3e6",
+   "id": "7271689b",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78afb3cd",
+   "id": "175abc64",
    "metadata": {},
    "source": [
     "*Create train, valid sets*"
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a5a56637",
+   "id": "4ae0d42a",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "45cafa5a",
+   "id": "b3be2d57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "60871e0a",
+   "id": "10a83872",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "48c4b999",
+   "id": "6c701d0e",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ad5855b1",
+   "id": "f8a43301",
    "metadata": {},
    "source": [
     "*Create Network*\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "34a2f568",
+   "id": "a4e3290e",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "0199988f",
+   "id": "d7d9239a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,8 +451,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "43b43e4e",
+   "execution_count": 51,
+   "id": "06b9aa54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,13 +460,23 @@
     "    return np.maximum(0, Z)\n",
     "\n",
     "def softmax(Z):\n",
-    "    return np.exp"
+    "    return np.exp(Z) / np.sum(np.exp(Z))\n",
+    "\n",
+    "def one_hot(Y):\n",
+    "    one_hot_Y = np.zeros((Y.size, Y.max() + 1))\n",
+    "    one_hot_Y[np.arange(Y.size), Y] = 1\n",
+    "\n",
+    "    # Make each column an example instead of each row\n",
+    "    return one_hot_Y.T\n",
+    "\n",
+    "def deriv_ReLU(Z):\n",
+    "    return Z > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f00bafc",
+   "execution_count": 48,
+   "id": "26725085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,6 +486,23 @@
     "    Z2 = W2.dot(A1) + b2\n",
     "    A2 = softmax(Z2)\n",
     "    return A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5000be7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def back_prop(Z1, A1, Z2, A2, W2, Y):\n",
+    "    one_hot_Y = one_hot(Y)\n",
+    "    dZ2 = A2 - one_hot_Y\n",
+    "    dW2 = 1 / m * dZ2.dot(A1.T)\n",
+    "    db2 = 1 / m * np.sum(dZ2, 2)\n",
+    "    \n",
+    "    dZ1 = W2.T.dot(dZ2) * deriv_ReLU(Z1)\n",
+    "    "
    ]
   }
  ],
