Create update params function

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe36a010",
+   "id": "83d66d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03bfde32",
+   "id": "4e4bfcd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3024d23b",
+   "id": "f1335b16",
    "metadata": {
     "scrolled": true
    },
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6b236765",
+   "id": "f141cd26",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3843b69c",
+   "id": "cd18be2a",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7271689b",
+   "id": "37d5f9de",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "175abc64",
+   "id": "390c7dd0",
    "metadata": {},
    "source": [
     "*Create train, valid sets*"
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4ae0d42a",
+   "id": "46211c4d",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b3be2d57",
+   "id": "584ecbc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "10a83872",
+   "id": "5159d4da",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6c701d0e",
+   "id": "1626cb47",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f8a43301",
+   "id": "cde7c3a7",
    "metadata": {},
    "source": [
     "*Create Network*\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a4e3290e",
+   "id": "d8341223",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d7d9239a",
+   "id": "87c98299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "06b9aa54",
+   "id": "bd178598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "26725085",
+   "id": "bd8eb21f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,20 +490,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5000be7e",
+   "execution_count": 52,
+   "id": "f35bbbf6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def back_prop(Z1, A1, Z2, A2, W2, Y):\n",
+    "def back_prop(Z1, A1, Z2, A2, W2, X, Y):\n",
     "    one_hot_Y = one_hot(Y)\n",
     "    dZ2 = A2 - one_hot_Y\n",
     "    dW2 = 1 / m * dZ2.dot(A1.T)\n",
     "    db2 = 1 / m * np.sum(dZ2, 2)\n",
     "    \n",
     "    dZ1 = W2.T.dot(dZ2) * deriv_ReLU(Z1)\n",
-    "    "
+    "    dW1 = 1 / m * dZ1.dot(X.T)\n",
+    "    db1 = 1 / m * np.sum(dZ1, 2)\n",
+    "    \n",
+    "    return dW1, db1, dW2, db2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2472125a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_params(W1, b1, W2, b2, dW1, db1, dW2, db2, alpha):\n",
+    "    W1 = W1 - alpa * dW1\n",
+    "    b1 = b1 - alpa * db1\n",
+    "    W2 = W2 - alpa * dW2\n",
+    "    b2 = b2 - alpa * db2\n",
+    "    return W1, b1, W2, b22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "831c0e11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
